--- a/GeoNode/app/src/main/AndroidManifest.xml
+++ b/GeoNode/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.leepresswood.geonode.activities.LoginActivity"
+            android:name=".activities.LoginActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.leepresswood.geonode.activities.MapActivity"
+            android:name=".activities.MapActivity"
             android:label="@string/title_activity_map" >
         </activity>
 
@@ -27,6 +27,11 @@
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".activities.RegisterActivity"
+            android:label="@string/title_activity_register" >
+        </activity>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
