--- a/GeoNode/app/src/main/AndroidManifest.xml
+++ b/GeoNode/app/src/main/AndroidManifest.xml
@@ -32,7 +32,11 @@
             android:name=".activities.RegisterActivity"
             android:label="@string/title_activity_register" >
         </activity>
-	 </application>
+        <activity
+            android:name=".activities.MapsActivity"
+            android:label="@string/title_activity_maps" >
+        </activity>
+    </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
